--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-API_ID = '11029886'
-API_HASH = '4e74899bfd41879c6a4b48cf6a07f456'
-BOT_TOKEN = '5998213610:AAHJ72Q25xuoHeA6vG9ZMx11PzPbOvRSy9g'
+API_ID = ''
+API_HASH = ''
+BOT_TOKEN = ''
